# Curlse

./: .gitignore  .gitmodules  CMakeLists.txt  Curlse.make  LICENSE.txt  Makefile  README.md  http.cpp  json.cpp  main.cpp  premake5.lua  stringstuff.h  structs.h
.github/workflows/: linux.yml  msbuild.yml
